fix(header): fixed header displacement on IE

--- a/app/client/stylesheets/components/pu-button.sass
+++ b/app/client/stylesheets/components/pu-button.sass
@@ -240,13 +240,13 @@
         span.mobile
             display: block
 
-            @media screen and (min-width: 1042px)
+            @media screen and (min-width: 1100px)
                 display: none
 
         span.desktop
             display: none
 
-            @media screen and (min-width: 1042px)
+            @media screen and (min-width: 1100px)
                 display: block
 
         &-profiledropdown
